feat: add base filter